src/test/ui/derived-errors/issue-31997-1.stderr
error[E0433]: failed to resolve: use of undeclared type or module `HashMap`
  --> $DIR/issue-31997-1.rs:20:19
   |
LL |     let mut map = HashMap::new();
   |                   ^^^^^^^ use of undeclared type or module `HashMap`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
